# linux_shortcut_tool

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.08DC6C918874D401.idx
docs/linux-shortcut-app/.obsidian/: workspace.json
docs/linux-shortcut-app/Design/Features/: Overview.md
includes/hdr/: CommandParser.hpp  Shortcut.hpp  parseCommand.hpp
src/: CommandParser.cpp  Shortcut.cpp  main.cpp  parseCommand.cpp
